# structural-commodity-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
data/demo/: synthetic_weekly.csv
docs/: METHODOLOGY.md
docs/adr/: 0001-independent-sourcing-of-critical-values.md  0002-preregistration-as-code.md  0003-quarantine-never-autocorrect.md  0004-explanation-not-prediction.md
examples/: worked_example.py  worked_example_output.md
src/monitor/: decay.py  extraction.py  model.py  narrative.py  registry.py  synthetic.py
tests/: test_decay.py  test_extraction.py  test_model.py  test_narrative.py  test_registry.py  test_synthetic.py
