[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "structural-commodity-monitor"
version = "0.4.0"
description = "Structural fair-value monitoring for physical commodity positions"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
llm = ["anthropic>=0.40"]

[tool.hatch.build.targets.wheel]
packages = ["src/monitor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 96
src = ["src", "tests"]
